--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.395.0",
     "next": "14.2.4",
-    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "sass": "^1.89.2",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
